Added patches to support non-ISO-8859-1 character encodings in Cocoon + XML-RPC; Fixed OutOfMemory exception during XUpdate; Added ShutdownListener to stop Jetty.
svn path=/trunk/eXist-1.0/; revision=97


Former-commit-id: bd6906f52069c6612f3a61229c258c275e3c12f1