@@ -12,7 +12,8 @@ set JAVA_HOME=$JAVA_HOME
 set JAVA_CMD="%JAVA_HOME%\bin\java"
 
 if not "%JAVA_OPTS%" == "" goto gotJavaOpts
-set JAVA_OPTS=-Xms64000k -Xmx256000k
+set JAVA_ENDORSED_DIRS="%EXIST_HOME%"\lib\endorsed
+set JAVA_OPTS=-Xms64000k -Xmx256000k -Dfile.encoding=UTF-8 -Djava.endorsed.dirs="%JAVA_ENDORSED_DIRS"
 
 :gotJavaOpts
 %JAVA_CMD% "%JAVA_OPTS%" -Dexist.home="%EXIST_HOME%" -jar "%EXIST_HOME%\start.jar" standalone %1 %2 %3 %4 %5
